Restore Tessera Core v4 (Copy-On-Write Quadtree)